removed swagger auto generated dataclasses for json desirializing, swagger helpers fixed yaml
